# hesfm

./: CMakeLists.txt  Dockerfile.blackwell  LICENSE  README.md  nodelet_plugins.xml  package.xml  run_semantic_slam_docker.sh
cfg/: Costmap.cfg  Exploration.cfg  HESFMMapper.cfg  SemanticSegmentation.cfg
config/: benchmark_config.yaml  d455_camera.yaml  dformerv2_evidential_params.yaml  evidential_params.yaml  exploration_params.yaml  hesfm_jetson.yaml  hesfm_params.yaml  navigation_params.yaml  segmentation_models.yaml  semantic_costmap_3d.yaml  uncertainty_aware_bki.yaml
docs/: API.md  INSTALLATION.md  README.md  USAGE.md
include/hesfm/: adaptive_kernel.h  config.h  exploration.h  gaussian_primitives.h  hesfm.h  octree_map.h  semantic_map.h  type.h  types.h  uncertainty.h  uncertainty_aware_bki.h
launch/: d455_camera.launch  hesfm.launch  hesfm_evaluation.launch  hesfm_evidential.launch  hesfm_exploration.launch  hesfm_jetson.launch  hesfm_navigation.launch  mapper_only.launch  segmentation_only.launch
msg/: ExplorationGoal.msg  ExplorationGoalArray.msg  GaussianPrimitive.msg  GaussianPrimitiveArray.msg  SemanticMap.msg  SemanticMapCell.msg  SemanticPoint.msg  SemanticPointCloud.msg  UncertaintyInfo.msg
rviz/: hesfm.rviz  hesfm_exploration.rviz  hesfm_minimal.rviz  hesfm_navigation.rviz
scripts/: bag_player.py  build_tensorrt_engine.py  compute_depth_stats.py  dataset_loader.py  dformerv2_evidential_node.py  esanet_evidential_node.py  evaluate_mapping.py  evaluation_node.py  exploration_goal_relay.py  export_dformer_onnx.py  fps_monitor.py  map_saver_node.py  segmentation.py  semantic_segmentation_node.py  tmux_hesfm_pipeline.sh  uncertainty_aware_semantic_cloud_node.py  uncertainty_visualizer.py
scripts/evidential/: __init__.py  dformerv2_evidential.py  esanet_evidential.py  evidential_head.py  fedl_loss.py
scripts/evidential/tests/: test_dformerv2_wrapper.py  test_evidential.py
scripts/training/: train_dformerv2_evidential.py  train_esanet_evidential.py
src/hesfm_core/: adaptive_kernel.cpp  config.cpp  exploration.cpp  gaussian_primitives.cpp  semantic_map.cpp  uncertainty.cpp
src/nodelets/: hesfm_mapper_nodelet.cpp  semantic_cloud_nodelet.cpp
src/nodes/: costmap_node.cpp  exploration_node.cpp  hesfm_mapper_node.cpp  semantic_cloud_node.cpp  semantic_costmap_3d_node.cpp  test.cpp  visualization_node.cpp
srv/: GetExplorationGoals.srv  GetMapInfo.srv  GetSemanticMap.srv  LoadMap.srv  QueryPoint.srv  QueryRegion.srv  ResetMap.srv  SaveMap.srv  SetParameters.srv
test/: test_core.cpp  test_hesfm.py  test_primitives.cpp  test_uabki.cpp  test_uncertainty.cpp
